--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/newdle-website" # the subpath of your site, e.g. /blog/
 url: "https://getnewle.io" # the base hostname & protocol for your site
