--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Newdle Project
 github_username: newdle
-url: https://newdle.github.io
+url: "https://newdle.github.io"
