--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ theme: jekyll-theme-cayman
 title: Newdle Project
 github_username: newdle
 url: "https://newdle.github.io"
+description: > # this means to ignore newlines until "baseurl:"
+ Newdle Project Official site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://newdle.github.io" # the base hostname & protocol for your site
