--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Newdle Project
-github_username: newdle
+github_username: indico
 description: > # this means to ignore newlines until "baseurl:"
  Newdle Project Official site
 baseurl: "/newdle" # the subpath of your site, e.g. /blog/
