--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Newdle Project
 github_username: indico
 description: > # this means to ignore newlines until "baseurl:"
  Newdle Project Official site
-#baseurl: "/newdle" # the subpath of your site, e.g. /blog/
+baseurl: "/newdle/" # the subpath of your site, e.g. /blog/
 #url: "https://getindico.io" # the base hostname & protocol for your site
